--- a/package.json
+++ b/package.json
@@ -12,33 +12,33 @@
     "tokens": "npx chakra-cli tokens ./src/themes/index.ts"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "zod": "^3.23.8",
-    "@chakra-ui/react": "^2.8.2",
+    "@chakra-ui/react": "^2.10.1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@tanstack/react-query": "^5.55.4",
     "@tanstack/react-virtual": "^3.10.8",
-    "framer-motion": "^11.3.30",
+    "framer-motion": "^11.11.4",
     "jotai": "^2.9.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
-    "reset-css": "^5.0.2"
+    "reset-css": "^5.0.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.8.3",
+    "@chakra-ui/cli": "^2.4.1",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.2",
     "globals": "^15.9.0",
+    "path": "^0.12.7",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.7.0",
     "vite": "^5.4.8",
-    "@biomejs/biome": "1.8.3",
-    "@chakra-ui/cli": "^2.4.1",
-    "path": "^0.12.7",
     "vite-tsconfig-paths": "^5.0.1"
   }
 }
